# dapper

./: .env  .gitignore  404.html  COPILOT.md  HISTORY_CLEANUP.md  MANIFEST.in  README.md  WINDSURF_TEST_SETUP.md  build_frame_eval.py  coverage.xml  index.html  mkdocs.yml  package-lock.json  pyproject.toml  pyrightconfig.json  pytest.ini  run_coverage.py  setup.cfg  setup.py  sitemap.xml  test_loaded_sources.py  test_loaded_sources_clean.py  update_test_imports.py  vscode-launch.json
.github/: COPILOT.md
.github/workflows/: ci.yml  docs-check.yml  docs-deploy.yml  tests.yml
architecture/backends/: index.html
architecture/breakpoints/: index.html
architecture/concurrency/: index.html
architecture/current-analysis/: index.html
architecture/error-handling/: index.html
architecture/ipc/: index.html
architecture/overview/: index.html
architecture/sys-monitoring/: index.html
dapper/: __init__.py  __main__.py  adapter.py  adapter_runner.py  adapter_thread.py  breakpoints_controller.py  connection.py  constants.py  dap_command_handlers.py  debug_adapter_comm.py  debug_helpers.py  debug_launcher.py  debug_shared.py  debugger.py  debugger_bdb.py  debugger_protocol.py  dev_tools.py  events.py  inprocess_debugger.py  ipc_context.py  launcher_ipc.py  launcher_main.py  protocol.py  protocol_types.py  server.py
dapper/_frame_eval/: __init__.py  _bytecode_instructions.py  _code_object_builder.py  _cython_wrapper.c  _cython_wrapper.pyx  _frame_evaluator.c  _frame_evaluator.pxd  _frame_evaluator.py  _frame_evaluator.pyx  _frame_evaluator_shared.py  backend.py  bytecode_safety.py  cache_manager.py  compatibility_policy.py  condition_evaluator.py  config.py  cpython_compat.pxd  cpython_compat.pxi  debugger_integration.py  eval_frame_backend.py  frame_eval_main.py  frame_tracing.py  frame_tracing_old.py  modify_bytecode.py  monitoring_backend.py  runtime.py  selective_tracer.py  settrace_backend.py  telemetry.py  tracing_backend.py  types.py  types.pyi  types_internal.py
dapper/adapter/: __init__.py  __main__.py  adapter.py  adapter_thread.py  backend_factory.py  base_backend.py  dap_command_handlers.py  debug_adapter_comm.py  debugger_backend.py  external_backend.py  hot_reload.py  inprocess_backend.py  inprocess_bridge.py  lifecycle.py  log_forwarder.py  payload_extractor.py  request_handlers.py  server.py  server_core.py  source_tracker.py  subprocess_manager.py  types.py
dapper/common/: constants.py
dapper/config/: __init__.py  config_manager.py  dapper_config.py
dapper/connections/: pipe.py  tcp.py
dapper/core/: __init__.py  asyncio_task_inspector.py  breakpoint_manager.py  breakpoint_resolver.py  breakpoints_controller.py  data_breakpoint_state.py  debug_comm.py  debug_helpers.py  debug_utils.py  debugger_bdb.py  exception_handler.py  inprocess_debugger.py  just_my_code.py  stepping_controller.py  structured_model.py  thread_tracker.py  variable_manager.py
dapper/errors/: __init__.py  dapper_errors.py  error_patterns.py
dapper/ipc/: __init__.py  ipc_adapter.py  ipc_binary.py  ipc_context.py  ipc_manager.py  ipc_receiver.py  reader_helpers.py  sync_adapter.py  transport_factory.py
dapper/launcher/: __main__.py  attach_by_pid.py  comm.py  debug_launcher.py  handlers.py  launcher_ipc.py
dapper/protocol/: capabilities.py  data_breakpoints.py  debugger_protocol.py  messages.py  protocol.py  protocol_types.py  requests.py  structures.py
dapper/shared/: breakpoint_handlers.py  command_handler_helpers.py  command_handlers.py  debug_shared.py  launcher_handlers.py  lifecycle_handlers.py  (+8 more)
doc/: ARCHITECTURE.md  BREAKPOINTS_CONTROLLER.md  CHECKLIST.md  CODE_QUALITY_CHECKLIST.md  CURRENT_ARCHITECTURE_ANALYSIS.md  DATA_BREAKPOINT_TRIGGERS_PLAN.md  DEVELOPMENT.md  FRAME_EVAL_BUILD_GUIDE.md  FRAME_EVAL_IMPLEMENTATION.md  FRAME_EVAL_PERFORMANCE.md  FRAME_EVAL_TROUBLESHOOTING.md  FRAME_EVAL_USER_GUIDE.md  MANUAL_TESTING_GUIDE.md  README.md  VS_CODE_EXTENSION_PLAN.md  debug_adapter_operational_modes.md  ideas-for-improvements.md  improvement-checklist.md  subprocess-debugging-plan.md  using-dapper-with-vscode.md
examples/: README.md  adapter_in_thread.py  demo_enhanced_set_variable.py  demo_restart.py  demo_set_variable.py  index.html  inprocess_launch.json  integrated_debugging.py  simple_command_provider.py  test_example.py
getting-started/: index.html
ideas-for-improvements/: index.html
launcher/: handlers.py
scripts/: __init__.py  build_frame_eval.py  clean_test_imports.py  collapse-history.ps1  collapse-history.sh  mkdocs_hooks.py  render-mermaid.ps1  render-mermaid.sh  run-windows-tests-from-wsl.sh  run-windows-tests-host.ps1  update_docs.py
search/: search_index.json
subprocess-debugging-plan/: index.html
testing/: README.md  __init__.py  dummy_debugger.py  test_conversion.py  test_dapper_client.py  test_dapper_manual.bat  test_debug_adapter_setup.py  test_launch_debug.py  test_runner.py  test_setup.bat  test_setup.ps1  test_terminate.py  test_two_terminals.bat
tests/: README.md  README_frame_eval_tests.md  _cython.py  conftest.py  constants.py  dummy_debugger.py  mocks.py  test_adapter.py  test_adapter_thread.py  test_command_providers.py  test_configuration_done_handler.py  test_connection.py  test_connections_pipe.py  test_cross_loop_shutdown.py  test_cython_extension_presence.py  test_dap_command_handlers.py  test_dap_command_handlers_extra.py  test_data_breakpoint_triggers.py  test_data_breakpoints.py  test_debug_adapter_comm.py  test_debug_helpers.py  test_debug_launcher_handlers.py  test_debug_shared_helpers.py  test_debugger.py  test_debugger_base.py  test_debugger_breakpoints.py  test_debugger_core.py  test_debugger_events.py  test_debugger_execution.py  test_debugger_ipc_binary.py  test_debugger_ipc_cleanup.py  test_debugger_ipc_defaults.py  test_debugger_launch.py  test_debugger_pipe_cleanup.py  test_debugger_protocol.py  test_debugger_threads.py  test_debugger_variables.py  test_enhanced_set_variable.py  test_evaluate_enhancement.py  test_exception_info_shape.py  (+24 more)
wiki/: DEPLOYMENT.md  README.md  README_WIKI.md  package.json
(+513 files in other folders)
