[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dapper"
version = "0.3.0"
description = "Debug Adapter Protocol implementation for Python"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = []
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jnsquire/dapper"
"Bug Tracker" = "https://github.com/jnsquire/dapper/issues"

[tool.coverage.run]
branch = true
relative_files = true
omit = [
    "tests/*",
    "testing/*",
    "examples/*",
    "dapper/__init__.py",
    "dapper/_version.py",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 99
indent-width = 4

# Assume Python 3.9+
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "DTZ",
    "T10",
    "DJ",
    "EM",
    "EXE",
    "FA",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TCH",
    "INT",
    "ARG",
    "PTH",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "AIR",
    "PERF",
    "FURB",
    "LOG",
    "RUF",
]

ignore = ["E501", "E741", "F401", "SIM105", "G004"]

# Allow autofix for all enabled rules (when `--fix`) is provided
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["dapper"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.lint.flake8-type-checking]
# Add quotes around type annotations, if doing so would allow
# an import to be moved into a type-checking block.
quote-annotations = true

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and imports
"tests/**/*" = ["PLR2004", "S101", "TID252", "SLF001"]
"testing/**/*" = ["PLR2004", "S101", "TID252", "SLF001", "TRY300", "PLR0911", "PERF203"]
# Examples can be more lenient
"examples/**/*" = ["INP001", "T201"]
# Allow print statements in debug launcher for protocol messages
"dapper/debug_launcher.py" = ["T201"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.0.0",
]

[tool.flake8]
max-line-length = 99
extend-ignore = ["E203", "TRY300"]
