[build-system]
requires = ["setuptools>=42", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dapper*"]

[project]
name = "dapper"
version = "0.6.2"
description = "Debug Adapter Protocol implementation for Python"
readme = "README.md"
authors = [
    {name = "Joel Squire", email = "joel@squire.org"}
]
license = "MIT"
dependencies = [
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
[project.optional-dependencies]
# extras used by developers; `uv run build-dev -- --install` expects this
# group to exist so that pip does not warn about a missing 'dev' extra.
dev = [
    "pyright>=1.1.405",
    "ruff>=0.9.0",
    "pytest>=8.3.5",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.0.0",
    "mkdocs",
    "mkdocs-material>=9.7.2",
    "Cython>=3.0",
]

# extras used for specific runtime/testing features
test = [
    "pytest-mock>=3.15.1",
]

frame-eval = [
    "Cython>=3.0",
]

[project.urls]
"Homepage" = "https://github.com/jnsquire/dapper"
"Bug Tracker" = "https://github.com/jnsquire/dapper/issues"

[tool.coverage.run]
branch = true
relative_files = true
omit = [
    "tests/*",
    "testing/*",
    "examples/*",
    "dapper/__init__.py",
    "dapper/_version.py",
    "run_coverage.py",
    "setup.py",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 99
indent-width = 4

# Assume Python 3.9+
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "DTZ",
    "T10",
    "DJ",
    "EM",
    "EXE",
    "FA",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TCH",
    "INT",
    "ARG",
    "PTH",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "AIR",
    "PERF",
    "FURB",
    "LOG",
    "RUF",
]

# Only ignore specific rules that we want to keep
ignore = ["E501", "E741", "SIM105", "G004", "T201", "TRY003", "EM101", "COM812"]  # allow lists and other literals without trailing commas

# Allow autofix for all enabled rules (when `--fix`) is provided
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["dapper"]
force-sort-within-sections = true
order-by-type = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.lint.flake8-type-checking]
# Add quotes around type annotations, if doing so would allow
# an import to be moved into a type-checking block.
quote-annotations = true

[tool.ruff.lint.pydocstyle]
# Use the Google-style docstring convention so that leading blank lines
# are flagged and can be auto-fixed (D212).  The default `pep257` convention
# does not enable that rule.
convention = "google"

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and imports
"tests/**/*" = ["PLR2004", "S101", "TID252", "SLF001", "INP001", "ARG001", "ARG005"]
"testing/**/*" = ["PLR2004", "S101", "TID252", "SLF001", "TRY300", "PLR0911", "PERF203", "INP001"]
# Examples can be more lenient
"examples/**/*" = ["INP001", "T201"]
# Allow print statements in debug launcher for protocol messages
"dapper/debug_launcher.py" = ["T201"]
# Allow test files to have imports after code for test setup
"tests/**/test_*.py" = ["E402"]

[dependency-groups]
dev = [
    "pyright>=1.1.405",
    "ruff>=0.9.0",
    "pytest>=8.3.5",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.0.0",
    "mkdocs",
    "mkdocs-material",
    "cython>=3.0",
    "mkdocs-material>=9.7.2",
]

[tool.vulture]
min_confidence = 60
exclude = [
    ".venv",
    "tests",
    "testing",
    "examples",
    "dapper/server.py",
]
sort_by_size = true

[project.scripts]
# Small developer convenience script so `uv run docs` can invoke the
# local documentation update helper without requiring an installed package.
docs = "dapper.utils.dev_tools:update_docs"
test = "dapper.utils.dev_tools:run_tests"
build-dev = "dapper.utils.dev_tools:build_dev"
build-prod = "dapper.utils.dev_tools:build_prod"
install-dev = "dapper.utils.dev_tools:install_dev"
# helper that builds frame-eval and optionally installs; users can run
# `uv run build-dev -- --install` or `uv run install-dev` directly.
frame-eval-clean = "dapper.utils.dev_tools:clean_frame_eval"
frame-eval-test = "dapper.utils.dev_tools:test_frame_eval"


